# auto-press

./: .gitignore  README.md  auto-press.spec  main.py  main_fluent.py  main_press.py  main_qt.py  press_bridge.py  press_core.py  press_engine.py  press_enter.py  press_enter_every_10s.py  press_enter_repeatedly.py  press_enter_v2.py  press_enter_v3.py  press_headless.py  press_store.py  press_tray.py  press_ui.py  press_ui_fluent.py  press_ui_qt.py  press_v2_engine.py  press_v2_store.py  press_v2_ui.py  press_windows.py  pyproject.toml  pysidedeploy.spec  vercel.json
bridge_phone/: index.html
bridge_phone/static/: app.js  manifest.webmanifest  style.css
notes/: pmf-stories.md
scripts/: restart.ps1
site/: README.md  index.html  install.ps1  install.sh  script.js  style.css
templates/: config.json  v2_config.json
tests/: test_bridge.py  test_core_flow.py  test_core_templates.py  test_engine.py  test_headless.py  test_main_press.py  test_store.py  test_v2_engine.py  test_v2_store.py
