[project]
name = "auto-press"
version = "3.0.0"
description = "Rule-based screen automation for Cursor and other desktop apps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pyside6>=6.6.0",
    "pyside6-fluent-widgets>=1.11.2",
    "pystray>=0.19.5",
    "pytest>=8.0.0",
]

[project.scripts]
auto-press = "main_press:main"
auto-press-qt = "main_qt:main"
auto-press-fluent = "main_fluent:main"
