[project]
name = "auto-press"
version = "3.0.0"
description = "Rule-based screen automation for Cursor and other desktop apps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pyside6>=6.6.0",
    "pyside6-fluent-widgets>=1.11.2",
    "pytest>=8.0.0",
    # Phone-bridge stack — folded into the main dep list because the
    # bridge is the headline feature, not an optional add-on. Adds
    # ~10 MB of wheels; trivial at modern install scales.
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
]
uia = [
    "uiautomation>=2.0",
]

[project.scripts]
auto-press = "main:main"
